--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <div id="title-box">
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
-
+          <h1>PHARRELL WILLIAMS</h1>
           <!-- Level 2 'HAPPY' Header -->
-
+          <h1>HAPPY</h1>
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
-
+          <h1>| FROM DESPICABLE ME 2 |</h1>
         </div>
       </div>
 
