--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       <div id="back" class="album">
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
-
+        <h1>| FROM DESPICABLE ME 2 |</h1>
         <!-- Level 1 'HAPPY' Header -->
-
+        <h1>HAPPY</h1>
         <!-- Level 3 'WRITTEN BY...' Header -->
-
+        <h1>WRITTEN BY PHARRELL WILLIAMS</h1>
         <!-- pararaph text 'PUBLISHED BY...' -->
 
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
